feat: add gtag and favicon

--- a/hugo.toml
+++ b/hugo.toml
@@ -111,3 +111,8 @@ theme = 'PaperMod'
 pygmentsUseClasses = true
 [markup.highlight]
   noClasses = false
+
+# Google Analytics 配置
+[services]
+  [services.googleAnalytics]
+    ID = "G-41ND0L72RZ"
